mejorado header, agregue mapas, extend y mixin para cumplir el desafio, incorpore boton de comprar en carrito

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -14,8 +14,9 @@
 @import '../sass/component/carro';
 @import '../sass/component/preguntas';
 @import '../sass/component/tabla';
-
-
+@import '../sass/mapas';
+@import '../sass/extend';
+@import '../sass/mixin';
 
 @import '../sass/component/medias';
 
