--- a/css/style.css
+++ b/css/style.css
@@ -299,18 +299,19 @@ video {
 
 .contenido input {
   background-color: rgb(218, 183, 27);
+  opacity: 0.6;
   width: 120px;
-  height: 20px;
   margin: 20px 0;
   border-radius: 10px;
   font-family: "Anek Malayalam", sans-serif;
   font-weight: 700;
   font-size: 12px;
-  transition: width 50ms, height 50ms;
+  transition: width 100ms;
 }
 
 .contenido input:hover {
-  width: 140px;
+  width: 125px;
+  opacity: 1;
 }
 
 .nav__logo {
@@ -328,10 +329,11 @@ video {
 
 .contenido-carro {
   display: grid;
+  width: 40%;
   grid-template-columns: 80% 1fr;
   grid-template-rows: repeat(1, 150px);
   border: #000000 1px solid;
-  margin: 5% 25%;
+  margin: 1% 25%;
   background-color: rgba(51, 51, 51, 0.418);
 }
 
@@ -352,6 +354,21 @@ video {
   margin: 35px;
   font-weight: 600;
   text-justify: center;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.comprar {
+  display: inline-flex;
+  justify-self: center;
+  background-color: rgb(53, 184, 59);
+  font-size: 24px;
+  width: fit-content;
+  padding: 5px;
 }
 
 .accordion-flush {
@@ -384,6 +401,21 @@ video {
   height: 30px;
   font-family: "Anek Malayalam", sans-serif;
   font-weight: 600;
+}
+
+.comprar {
+  margin: 20px 0;
+  border-radius: 10px;
+  font-family: "Anek Malayalam", sans-serif;
+  font-weight: 700;
+}
+
+.comprar {
+  height: 100%;
+}
+
+.contenido input {
+  height: 20px;
 }
 
 @media only screen and (max-width: 768px) {
