--- a/sass/component/_carro.scss
+++ b/sass/component/_carro.scss
@@ -1,9 +1,10 @@
 .contenido-carro{
     display: grid;
+    width: 40%;
     grid-template-columns: 80% 1fr;
     grid-template-rows: repeat(1, 150px);    
     border: #000000 1px solid;
-    margin: 5% 25%;
+    margin: 1% 25%;
     background-color: rgba(51, 51, 51, 0.418);
 }
 .contenido-carro img{
@@ -22,4 +23,19 @@
     margin: 35px;
     font-weight: 600;
     text-justify: center;
+}
+.main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.comprar{
+    display: inline-flex;
+    justify-self: center;
+    background-color: rgb(53, 184, 59);
+    font-size: 24px;
+    @extend %botones;
+    width: fit-content;
+    padding: 5px;
+
 }
