--- a/sass/component/_tarjetas.scss
+++ b/sass/component/_tarjetas.scss
@@ -57,16 +57,17 @@
 
 .contenido input{
     background-color: $color3;
+    opacity: 0.6;
     width: 120px;
-    height: 20px;
     margin: 20px 0;
     border-radius: 10px;
     font-family: 'Anek Malayalam', sans-serif;
     font-weight: 700;
     font-size: 12px;
-    transition: width 50ms, height 50ms;
+    transition: width 100ms;
 }
 
 .contenido input:hover{
-    width: 140px;
+    width: 125px;
+    opacity: 1;
 }
